# raylib_spaceship

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/: entity.c  entity.h  game.c  game.h  player.c  player.h  utils.h
src/debugger/: debugger.c  debugger.h
